# sunobot

./: .gitignore  .pre-commit-config.yaml  Makefile  commit_and_push.sh  main.py  pyproject.toml  r.txt  run.sh
bot/: __main__.py  background_tasks.py  scheduler.py  settings.py  states.py
bot/db/: enum.py  func.py  models.py
bot/db/redis/: transaction_model.py  user_db_model.py  user_model.py
bot/handlers/: __init__.py  menu.py  music.py  payments.py
bot/handlers/cmds/: __init__.py  create_deep_link.py  credits.py  refund.py  speech_test.py  start.py
bot/handlers/manager/: __init__.py  withdraw.py
bot/handlers/menu/: __init__.py  contacts.py  earn.py  home.py  how.py  info.py  topup.py  tracks.py  withdraw.py
bot/handlers/music/: __init__.py  back.py  entry.py  lyrics.py  mode.py  style.py  title.py
bot/keyboards/: enums.py  factories.py  inline.py  reply.py
bot/middlewares/: metrics.py  throw_user_model.py
bot/utils/: admin_stats.py  agent_platform.py  background_task_helpers.py  formatting.py  menu_ui.py  messaging.py  metrics.py  music_helpers.py  music_state.py  music_topics.py  payments.py  referrals.py  speech_recognition.py  suno_api.py  texts.py  usage_events.py  withdrawals.py
migrations/versions/: 02cf4834c1b6_.py  07a604f230c0_.py  1ca213e116d1_.py  1ee579c2dfa9_add_lyrics_to_music_tasks.py  68d96810d4ca_.py  6961a63183aa_.py  6b9812815344_.py  a451d9935d85_.py  c2b7e1d4ab1c_music_tasks.py  d3f4a9b8c7e1_.py  f8c65f1d7b12_music_task_params.py
scripts/: e2e_smoke.py
tests/: aiogram_test_utils.py  conftest.py  fakes.py  test_cmds_handlers.py  test_contract_agent_platform.py  test_contract_suno_api.py  test_manager_withdraw_handlers.py  test_menu_handlers.py  test_music_handlers.py  test_payments_handlers.py
tests/integration/: test_dispatcher_flow.py
