[project]
name = "sunobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "aiogram==3.24.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiomysql==0.3.2",
    "aiosignal==1.4.0",
    "alembic==1.17.2",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "curl-cffi==0.6.4",
    "fastapi==0.110.3",
    "frozenlist==1.8.0",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "magic-filter==1.0.12",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "msgspec==0.20.0",
    "multidict==6.7.0",
    "openai==1.68.0",
    "pre-commit>=4.5.1",
    "propcache==0.4.1",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pymysql==1.1.2",
    "python-dotenv==1.2.1",
    "pytz>=2025.2",
    "pyyaml==6.0.3",
    "redis==7.1.0",
    "requests==2.32.5",
    "rich==13.9.4",
    "shellingham==1.5.4",
    "sqlalchemy==2.0.45",
    "starlette==0.37.2",
    "typer==0.10.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.2",
    "uvicorn==0.29.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "yarl==1.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
